@@ -118,7 +118,11 @@ module Rack
       def merge(raw_cookies, uri = nil)
         return unless raw_cookies
 
-        raw_cookies = raw_cookies.split("\n") if raw_cookies.is_a? String
+        if raw_cookies.is_a? String
+          raw_cookies = raw_cookies.split("\n")
+          raw_cookies.reject!{|c| c.empty? }
+        end
+
         raw_cookies.each do |raw_cookie|
           cookie = Cookie.new(raw_cookie, uri, @default_host)
           self << cookie if cookie.valid?(uri)
