@@ -2,6 +2,7 @@
 
 * Bug fixes
 
+  * Don't raise an error if raw cookies contain a blank line (John Reilly)
   * Handle parameter names with brackets properly (Tanner Donovan)
 
 == 0.5.3 / 2009-11-27
